--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,51 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat+Subrayada:wght@400;700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap');
+
+.section {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  height: 97vh;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  width: 30%;
+  height: 30%;
+  font-family: 'Poppins', sans-serif;
+  font-size: 12px;
+  color: #000;
+}
+
+.items {
+  background-color: #e0e0e0;
+  border: 1px solid #bdbdbd;
+  text-align: center;
+  padding: 0.75rem;
+  margin: 0;
+}
+
+.item0 {
+  background-color: #858693;
+  color: #fff;
+  padding-right: 0.5rem;
+  font-size: 16px;
+  grid-column: 1/5;
+  text-align: right;
+}
+
+.item17 {
+  grid-column: 1/3;
+}
+
+.item4,
+.item8,
+.item12,
+.item16,
+.item19 {
+  background-color: #f5913e;
+}
+
 /* .App {
   text-align: center;
 }
