--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat+Subrayada:wght@400;700&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,600&display=swap');
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.App {
+  min-height: 100vh;
+  background-image: linear-gradient(red, yellow, green);
+}
+
 .section {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-start;
+  padding: 3rem 2rem;
   height: 97vh;
+}
+
+.h2 {
+  margin: 2rem 3rem 0 0;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 1.75rem;
+  color: white;
+  border-bottom: 3px solid #000;
 }
 
 .container {
   display: grid;
   grid-template-columns: repeat(4, auto);
-  width: 30%;
-  height: 30%;
+  width: 25%;
+  height: 50%;
   font-family: 'Poppins', sans-serif;
   font-size: 12px;
   color: #000;
 }
 
 .items {
-  background-color: #e0e0e0;
+  background-color: #322514;
   border: 1px solid #bdbdbd;
+  color: #fff;
   text-align: center;
   padding: 0.75rem;
   margin: 0;
 }
 
 .item0 {
-  background-color: #858693;
+  background-color: #0d1137;
   color: #fff;
   padding-right: 0.5rem;
   font-size: 16px;
@@ -43,45 +64,69 @@
 .item12,
 .item16,
 .item19 {
-  background-color: #f5913e;
+  background-color: #e52165;
 }
 
-/* .App {
-  text-align: center;
+.header {
+  color: #000;
+  display: grid;
+  grid-template-columns: 75% 25%;
+  margin-bottom: 2rem;
+  padding: 2rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.headerTitle {
+  padding: 0 1rem;
+  margin: auto 0;
+  font-family: 'Poppins', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.25rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navLinks {
+  text-decoration: none;
+  color: #000;
+  height: 1rem;
+}
+
+.homeSection {
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.h1 {
+  margin-bottom: 1rem;
+  font-weight: 600;
+  font-size: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
+.p {
+  font-style: normal;
+  line-height: 1.75rem;
+  text-align: justify;
+  color: #000;
+  margin-bottom: 0.75rem;
+}
 
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.quoteSection {
+  border: 2px solid white;
+  background-color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  padding: 3rem;
+}
+
+.quotes {
+  line-height: 2rem;
+}
